force-app/main/default/objects/Transfer_Shipping_Manifest_Line__c/Transfer_Shipping_Manifest_Line__c.object-meta.xml
<CustomObject>
    <label>Transfer Shipping Manifest Line</label>
    <nameField>
        <displayFormat>TSML-{0000000000}</displayFormat>
        <label>TSM Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Shipping Manifest Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>