force-app/main/default/objects/Transfer_Shipping_Manifest_Line__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line</label>
    <referenceTo>Purchase_Order_Line__c</referenceTo>
    <relationshipLabel>Transfer Shipping Manifest Lines</relationshipLabel>
    <relationshipName>Transfer_Shipping_Manifest_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>