force-app/main/default/objects/Transfer_Shipping_Manifest_Line__c/fields/Transfer_Shipping_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Shipping_Manifest__c</fullName>
    <label>Transfer Shipping Manifest</label>
    <referenceTo>Transfer_Shipping_Manifest__c</referenceTo>
    <relationshipLabel>Transfer Shipping Manifest Lines</relationshipLabel>
    <relationshipName>Transfer_Shipping_Manifest_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>