force-app/main/default/objects/Transfer_Shipping_Manifest_Line__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <formula>Purchase_Order_Line__r.UID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UID</label>
    <type>Text</type>
</CustomField>