force-app/main/default/objects/Transfer_Shipping_Manifest_Line__c/fields/Unit_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cultivation_Tax__c</fullName>
    <label>Unit Cultivation Tax</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>