force-app/main/default/objects/Transfer_Shipping_Manifest_Line__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <description>Products Are For Buy Sell</description>
    <label>Product</label>
</RecordType>