force-app/main/default/objects/Transfer_Shipping_Manifest_Line__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <description>Service Transfer or Change of Custody</description>
    <label>Service</label>
</RecordType>