force-app/main/default/objects/Transfer_Shipping_Manifest_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Order_Line__c</columns>
    <columns>Producer_Name__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Title__c</columns>
    <columns>Qty_Ordered__c</columns>
    <columns>Qty_Received__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>